--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 @import url('./nav-bar.scss');
+@import './home.scss';
 
 body{
     margin: 0px;
     padding: 0px;
-
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
