--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -1,9 +1,11 @@
 .nav-wrapper{
     display: flex;
     width: 100vw;
+    height: 20vh;
     justify-content: space-evenly;
     align-content: center;
     box-shadow: 0px 2px 32px -2px rgba(0,0,0,0.8);
+    background-color: white;
 }
 
 .nav-wrapper > .logo{
