Created menu page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @import url('./nav-bar.scss');
 @import './home.scss';
+@import './menu.scss';
+@import './menu-item.scss';
 
 body{
     margin: 0px;
