--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,27 @@
 @import './home.scss';
 @import './menu.scss';
 @import './menu-item.scss';
+@import './about.scss';
 
 body{
     margin: 0px;
     padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.label-wrapper{
+    display: flex;
+    justify-content: center;
+    .label{
+        text-align: center;
+        font-size: 4em;
+        font-weight: 800;
+        margin-top: 50px;
+        padding: 10px;
+        background-color: #0091ff;
+        color: whitesmoke;
+        box-shadow: 0px 14px 0px 0px rgb(24, 92, 138);
+        width: 400px;
+        border-radius: 20px;
+    }
 }
