Minor style changes to menu items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import url('./nav-bar.scss');
+@import './nav-bar.scss';
 @import './home.scss';
 @import './menu.scss';
 @import './menu-item.scss';
